--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "author": "",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.2.8",
     "winston": "^3.0.0"
   },
   "devDependencies": {
